[package]
name = "graceful_shutdown"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
tokio-stream = "0.1"
async-stream = "0.3.6"
tokio-util = { version = "0.7.18", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
